examples/wasm/envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.wasm
            config:
              config:
                name: "my_plugin"
                root_id: "my_root_id"
                vm_config:
                  vm_id: "my_vm_id"
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    #local:
                    #  filename: "/etc/envoy_filter_http_wasm_example.wasm"
                    remote:
                      sha256: 497302bb0de35537b066118bd9bfcd893fe46f04b32005a114ea0d2fc3683fab
                      http_uri:
                        uri: http://storage.googleapis.com/artifacts.mixologist-142215.appspot.com/extensions/jwt_header_plugin_15.wasm
                        cluster: googleapis_storage
                        timeout:
                          seconds: 5
                  allow_precompiled: true
          - name: envoy.router
            config: {}
  - name: staticreply
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "example body\n"
          http_filters:
          - name: envoy.router
            config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8099
  - name: googleapis_storage
    dns_lookup_family: V4_ONLY
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: storage.googleapis.com
        port_value: 80
  #- name: googleapis_storage
  #  connect_timeout: 0.5s
  #  type: strict_dns
  #  lb_policy: round_robin
  #  http_protocol_options: {}
    #hosts:
    #- socket_address:
    #  address: storage.googleapis.com
    #  port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
